--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,1 +1,5 @@
-<%= link_to "New Article", new_article_path %>
+<div class="row">
+  <div class="col-md-12">
+    <%= link_to "New Article", new_article_path %>
+  </div>
+</div>
